Mon Nov 14 00:32:27 CET 2005 (tk)
---------------------------------
  * libclamav: add support for CL_DB_NOPHISHING (disables phishing signatures)
  * clamscan: add --no-phishing option
  * clamd: add DetectPhishing option

Sun Nov 13 03:05:52 CET 2005 (tk)
---------------------------------
  * libclamav: prepare for hardware acceleration

Sat Nov 12 02:25:03 CET 2005 (tk)
---------------------------------
  * libclamav/readdb.c: add cl_load(), successor of cl_loaddb and cl_loaddbdir

Fri Nov 11 01:27:56 CET 2005 (tk)
---------------------------------
  * libclamav/matcher-ac.c: replace AC_MIN_LENGTH with cli_matcher->ac_depth

Thu Nov 10 23:48:27 CET 2005 (tk)
---------------------------------
  * libclamav/others.c, clamav.h: remove cl_perror()

Thu Nov 10 20:26:44 CET 2005 (tk)
---------------------------------
  * libclamav/matcher.c: remove cl_buildtrie(), cl_freetrie()

Thu Nov 10 19:28:40 CET 2005 (tk)
---------------------------------
  * libclamav/matcher.c, clamav.h: remove cl_scanbuff()

Thu Nov  3 23:04:20 CET 2005 (tk)
---------------------------------
  * clamd: properly handle ReadTimeout in SESSION
	   Bug reported by Kamil Kaczkowski <kamil*kamil.eisp.pl>

Thu Nov  3 22:46:21 CET 2005 (tk)
---------------------------------
  * libclamav/mspack/cabd.c: fix possible infinite loop in cabd_find
			     Reported by iDEFENSE (IDEF1180)

Thu Nov  3 22:44:00 CET 2005 (tk)
---------------------------------
  * libclamav/tnef.c: fix possible infinite loop
		      Reported by iDEFENSE (IDEF1169)

Thu Nov  3 22:36:11 CET 2005 (tk)
---------------------------------
  * libclamav/petite.c: fix boundary checks, patch by aCaB

Thu Nov  3 22:33:20 CET 2005 (tk)
---------------------------------
  * libclamav/fsg.c: fix buffer size calculation in unfsg_133
		     Reported by 3Com's Zero Day Initiative (ZDI-05-002)

Mon Oct 31 21:21:38 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Scan attachments that have no filename
