@@ -44,6 +44,7 @@ typedef enum {
     CL_TYPE_RIFF,
     CL_TYPE_BINHEX,
     CL_TYPE_TNEF,
+    CL_TYPE_CRYPTFF,
     CL_TYPE_PDF,
 
     /* bigger numbers have higher priority (in o-t-f detection) */
